[package]
name = "yaml"
version = "0.0.11"
authors = [ "kimhyunkang@gmail.com" ]
build = "build.rs"

description = "LibYAML binding for Rust"
repository = "https://github.com/kimhyunkang/libyaml-rust"
readme = "README.md"

keywords = ["yaml", "libyaml"]

license = "MIT"

[dependencies]
regex = "~0.1.12"
regex_macros = "~0.1.6"
