[package]
name = "yaml"
version = "0.2.0"
authors = [ "kimhyunkang@gmail.com" ]
build = "build.rs"

description = "LibYAML binding for Rust"
repository = "https://github.com/kimhyunkang/libyaml-rust"
readme = "README.md"

keywords = ["yaml", "libyaml"]

license = "MIT"

[dependencies]
regex = "0.2"
regex_macros = "0.2"
